Fixed overlap issue with time control

--- a/style.css
+++ b/style.css
@@ -60,6 +60,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  padding-top: 15px;
 }
 
 a {
